--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -194,7 +194,7 @@ if(surfaceTotal < 45) surfaceTotal = 45; // Minimum charge
 
 total += surfaceTotal;
 
-summary += `<li>${type} (${condition}) - ${length}m x ${width}m: £${surfaceTotal.toFixed(2)}
+summary += `<li>${length}m x ${width}m: £${surfaceTotal.toFixed(2)}
 <br>This involves ${condition.toLowerCase()} cleaning of the ${type.toLowerCase()} surface.</li>`;
 });
 
